alphabet sorting + fixed gui

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
     <section class="product-collection">
         <h1>Product Collection</h1>
+        <div class="dropdown">
+            <button class="dropdown-toggle" id="dropdownBtn">Sortera</button>
+            <div class="sort-buttons dropdown-menu">
+                <button class="sortBtn az"><i class="ri-sort-alphabet-asc"></i> A-Z</button>
+                <button class="sortBtn za"><i class="ri-sort-alphabet-desc"></i> Z-A</button>
+                <button class="sortBtn priceLow"><i class="ri-sort-number-asc"></i> Billigaste produkten först</button>
+                <button class="sortBtn priceHigh"><i class="ri-sort-number-desc"></i> Dyraste produkten först</button>
+            </div>
+        </div>
         <div class="product-list"></div>
     </section>
 
