--- a/cart.html
+++ b/cart.html
@@ -30,32 +30,15 @@
         </div>
 
         <div class="cart-items">
-            <div class="cart-items">
-                <div class="cart-item">
-                    <!-- <div class="product">
-                        <img src="images/products/acerAspire1.png">
-                        <div class="item-detail">
-                            <p>Acer Aspire 3</p>
-                            <div class="size-color-box">
-                                <span class="size">15,6"</span>
-                                <div class="color">Light grey</div>
-                            </div>
-                        </div>
-                    </div>
-                    <span class="price">100 SEK</span>
-                    <div class="quantity"><input type="number" value="1" min="1"></div>
-                    <span class="total-price">199.9 SEK</span>
-                    <button class="remove"><i class="ri-close-line"></i></button>
-                </div> -->
-            </div>
+            <div class="cart-item"></div>
 
-            <div class="cart-total">
-                <h3>Cart Total</h3>
-                <p>Subtotal <span class="subtotal">0.00 SEK</span></p>
-                <p>Delivery Free <span>Free</span></p>
-                <p>Grand Total <span class="grand-total">0.00 SEK</span></p>
-                <button class="btn">Proceed to Checkout</button>
-            </div>
+        </div>
+        <div class="cart-total">
+            <h3>Cart Total</h3>
+            <p>Subtotal <span class="subtotal">0.00 SEK</span></p>
+            <p>Delivery Free <span>Free</span></p>
+            <p>Grand Total <span class="grand-total">0.00 SEK</span></p>
+            <button class="btn">Proceed to Checkout</button>
         </div>
     </div>
 
